--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 			<div class="swiper-slide">
 				<h3 class="lianxi ani" swiper-animate-effect="fadeIn" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s">联系方式</h3>
 				<ul class="lx-content">
-					<li class="phone ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.7s" swiper-animate-delay="0.3s">电话:15168XXXX27</li>
+					<li class="phone ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.7s" swiper-animate-delay="0.3s">电话:15168228927</li>
 					<li class="qq ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.7s" swiper-animate-delay="0.3s">QQ:760475667</li>
 					<li class="address ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.7s" swiper-animate-delay="0.3s">地址:浙江大城市学院南校区</li>
 				</ul>
